# gbs_player

./: .gitignore  LICENSE  Makefile  README.en.md  README.md  gbs_player_tool.py
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
apps/android/app/src/main/java/io/github/kleusbalut/gbsplayer/android/: AppLocale.kt  CoverGamepadView.kt  DeltaSkin.kt  EmulatorRepository.kt  EmulatorSession.kt  MainActivity.kt  NativeBridge.kt  PlaybackService.kt  PlaybackSettings.kt  RomAssetInstaller.kt  SkinControllerView.kt
apps/android/app/src/main/res/drawable/: default_gamepad_ab_button.xml  default_gamepad_button.xml  default_gamepad_pill_button.xml  ic_repeat_all.xml  ic_repeat_off.xml  ic_repeat_one.xml  ic_stat_music.xml
apps/android/app/src/main/res/layout/: activity_main.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/values-ja/: strings.xml
assets/ui/: gbs_player.gbr  gbs_player_map.gbm
docs/: android-player.md  build.en.md  build.md  songlist-format.md  usable-characters.md  usage.en.md  usage.md
src/player/: jp_font.h  main.c
tools/: build.py  fetch_pkmnfont.py  fetch_sameboy.py  gbs_common.py  gen_jp_font.py  make_helpers.py  package_android.py
tools/debug/: dis.py
